@@ -11,5 +11,8 @@
         public virtual string Title { get; set; }
         public virtual string Notes { get; set; }
         public virtual Book Book { get; set; }
+
+        // Used in Inverse example
+        public virtual int ChapterIndex { get; set; }
     }
 }
